# modern-format-boost

./: .clippy.toml  .gitignore  2  3day_full_diff.txt  ALGORITHM_DEEP_DIVE_v4.10.md  ALGORITHM_DEEP_DIVE_v4.6.md  ALGORITHM_DEEP_DIVE_v4.7.md  ALGORITHM_DEEP_DIVE_v4.9.md  ALGORITHM_SUMMARY.md  BUG_ANALYSIS_FINAL.md  BUG_ANALYSIS_v4.7.md  BUG_ANALYSIS_v4.8.md  BUG_FIX_COMPLETION_REPORT_v7.8.1.md  BUG_FIX_PLAN_v7.8.1.md  BUG_FIX_RSYNC_CASE_SENSITIVITY.md  CHANGELOG.md  CHANGELOG_v7.3.1.md  CHANGES_SUMMARY.md  CJXL_FIX_COMPLETION_REPORT_v7.8.2.md  CLEANUP_SUMMARY.md  CODE_AUDIT_CHECKLIST_v5.1.md  CODE_AUDIT_REPORT.md  CODE_DEDUP_ANALYSIS.md  COMPARISON_v5.2_vs_v5.54.md  CONVERSION_AUDIT_REPORT_v7.8.md  CRITICAL_BUG_FIX_v7.4.1.md  Cargo.toml  DEAD_CODE_REMOVAL_REPORT.md  DEBUG_REPORT_FREEZE.md  DEPENDENCY_AUDIT_REPORT.md  DETAILED_MERGE_ANALYSIS.md  DIRECTORY_FIX_SUMMARY.md  DIRECTORY_STRUCTURE_AUDIT.md  DIRECTORY_STRUCTURE_STATUS.md  ERROR_FIX_SUMMARY.md  FINAL_BUG_ANALYSIS_SUMMARY_v666.md  GIF_DURATION_FIX.md  GIF_TOLERANCE_FIX_SUMMARY.md  HEIC_HDR_UPDATE.md  HOW_TO_USE_LATEST_BINARY.md  (+95 more)
.agent/workflows/: release_version.md
.github/workflows/: nightly-release.yml  release.yml
Modern Format Boost.app/Contents/: Info.plist
docs/: AUDIT_DESIGN_ISSUES.md  AUDIT_IMAGE_QUALITY_AND_CONVERT.md  AUDIT_QUALITY_DECISION_CHAIN.md  AUDIT_UNUSED_CODE.md  BRANCH_STRATEGY.md  BROTLI_EXIF_CORRUPTION.md  BROTLI_EXIF_CORRUPTION_CN.md  CODE_AUDIT.md  COPY_AND_COMPLETENESS.md  VERSION_MANAGEMENT.md  quality_detection_improvements.md
img_av1/: Cargo.toml  build.rs
img_av1/src/: analyzer.rs  constants.rs  conversion_api.rs  formats.rs  heic_analysis.rs  jpeg_analysis.rs  lib.rs  lossless_converter.rs  main.rs  metrics.rs
img_hevc/: Cargo.toml  build.rs
img_hevc/src/: analyzer.rs  constants.rs  conversion_api.rs  detection_api.rs  formats.rs  heic_analysis.rs  lib.rs  lossless_converter.rs  main.rs  metrics.rs  quality_core.rs  recommender.rs
imgquality_API/src/: analyzer.rs  conversion_api.rs  detection_api.rs  formats.rs  jpeg_analysis.rs  lossless_converter.rs  main.rs
imgquality_av1/: Cargo.toml  build.rs
imgquality_av1/src/: analyzer.rs  conversion_api.rs  detection_api.rs  formats.rs  jpeg_analysis.rs  lib.rs  lossless_converter.rs  main.rs  quality_core.rs
imgquality_hevc/: Cargo.toml  build.rs
imgquality_hevc/src/: analyzer.rs  conversion_api.rs  detection_api.rs  formats.rs  heic_analysis.rs  jpeg_analysis.rs  lossless_converter.rs  main 2.rs  main.rs  quality_core.rs
imgquality_hevc/tests/: test_explorer.rs
scripts/: README_拖拽使用说明.md  add_clippy_allows.sh  add_test_allows.sh  analyze_conversion_diff.sh  analyze_dead_code.sh  analyze_old_log_v666.sh  apply_smart_copier_all_tools.sh  apply_smart_copier_v7.4.1.sh  apply_vmaf_fix.sh  audit_all_copy_locations.sh  audit_dependencies.sh  auto_fix_clippy.py  batch_fix_clippy.py  build_all.sh  build_and_test.sh  cache_cleaner.sh  check_dead_code.sh  check_unused_deps.sh  cleanup_jxl_backups.sh  cleanup_project.sh  code_fix_verification.sh  commit_v7.5.sh  commit_vmaf_fix.sh  common.sh  common_zsh.sh  complete_clippy_fix.sh  comprehensive_conversion_audit.sh  comprehensive_gif_test.sh  comprehensive_safety_test.sh  create_test_image.sh  debug_ffmpeg_command.sh  deep_log_analysis.sh  design_test_1percent.sh  diagnose_ffmpeg.sh  diagnose_ffmpeg_issue.sh  diagnose_structure_bug.sh  direct_test_v7.5.1.sh  drag_and_drop_processor.bat  drag_and_drop_processor.sh  e2e_quality_test.sh  (+118 more)
scripts/archive/: analyze_1_conversion.sh  analyze_1_detailed.sh  analyze_conversion_diff.sh  commit_chroma_finding.sh  commit_chroma_note.sh  commit_ffmpeg_priority.sh  commit_install_scripts.sh  commit_v7.2.sh  compare_ssim_vs_psnr.sh  debug_ffmpeg_command.sh  fix_all_missing.sh  fix_missing_1_files.sh  fix_missing_mov.sh  fix_missing_xmp.sh  fix_quality_verification.sh  fix_vmaf_model.sh  test_ffmpeg_command.sh  test_ffmpeg_filter.sh  test_long_video_cpu_stepping.sh  test_ms_ssim_target.sh  test_ms_ssim_vs_ssim.sh  test_priority_change.sh  test_quality_fix.sh  test_v6.6_real_files.sh  (+8 more)
shared_utils/: COMMON_UTILS.md  Cargo.toml  EXTERNAL_LOGGING_USAGE.md  GPU_CEILING_IMPROVEMENT_v5.80.md  README.md
shared_utils/proptest-regressions/: explore_strategy.txt  video_explorer_tests.txt
shared_utils/src/: analysis_cache.rs  app_error.rs  avif_av1_health.rs  batch.rs  checkpoint.rs  cli_runner.rs  codecs.rs  colors.rs  common_utils.rs  conversion.rs  conversion_types.rs  crf_constants.rs  ctrlc_guard.rs  date_analysis.rs  enhanced_logging.rs  error_handler.rs  error_logging.rs  errors.rs  explore_strategy.rs  ffmpeg_process.rs  ffprobe.rs  ffprobe_json.rs  file_copier.rs  file_sorter.rs  flag_validator.rs  float_compare.rs  gif_meme_score.rs  gpu_accel.rs  hdr_decode.rs  hdr_utils.rs  heartbeat_manager.rs  image_analyzer.rs  image_classifiers.json  image_detection.rs  image_detection_tests.rs  image_formats.rs  image_heic_analysis.rs  image_jpeg_analysis.rs  image_metrics.rs  image_quality_core.rs  (+44 more)
shared_utils/src/metadata/: exif.rs  linux.rs  macos.rs  mod.rs  network.rs  windows.rs
shared_utils/src/types/: crf.rs  file_size.rs  iteration.rs  mod.rs  perception.rs  ssim.rs
shared_utils/src/video_explorer/: README.md  calibration.rs  codec_detection.rs  dynamic_mapping.rs  error_handling.rs  gpu_coarse_search.rs  metadata.rs  precheck.rs  precision.rs  ssim_calculator.rs  stream_analysis.rs  test.rs
test_input/: test_60s.mov
test_output/: 1733953959926.jpg.jxl  mismatch_png.jxl  static_red.jxl
tests/: heic_lossless_detection_test.rs  webp_avif_lossless_test.rs
vid_av1/: Cargo.toml
vid_av1/src/: animated_image.rs  conversion_api.rs  detection_api.rs  ffprobe.rs  lib.rs  main.rs
vid_hevc/: Cargo.toml
vid_hevc/src/: animated_image.rs  codecs.rs  conversion_api.rs  ffprobe.rs  lib.rs  main.rs
vidquality_API/: Cargo.toml
vidquality_av1/: Cargo.toml
vidquality_av1/src/: conversion_api.rs  ffprobe.rs  lib.rs  main.rs
vidquality_hevc/: Cargo.toml  diff_videos.list  diff_videos_1.list
xmp_merger/: Cargo.toml
xmp_merger/src/: main.rs
(+21 files in other folders)
