[workspace]
members = [
    "vid_av1",
    "vid_hevc",
    "img_hevc",
    "img_av1",
    "shared_utils"
]
resolver = "2"

[workspace.package]
version = "0.10.42"
edition = "2021"
license = "MIT"
authors = ["Modern Format Boost Contributors"]

[workspace.dependencies]
# Core error handling
anyhow    = "1.0.102"
thiserror = "2.0.18"

# Logging and tracing
tracing            = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "json"] }
tracing-appender   = "0.2.3"

# CLI
clap = { version = "4.5.60", features = ["derive", "cargo"] }

# Serialization
serde      = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

# Parallelism
rayon = "1.11.0"

# Progress indicators
indicatif = { version = "0.18.4", features = ["rayon"] }

# File system utilities
walkdir  = "2.5.0"
filetime = "0.2.27"
libc     = "0.2.169"
xattr    = "1.6.1"

# System utilities
which = "8.0.2"
log   = "0.4.29"

# Terminal
console = "0.16.2"
chrono  = { version = "0.4.44", features = ["serde"] }

# Image processing
image       = { version = "0.25.10", features = ["png", "jpeg", "webp", "gif", "tiff", "avif", "avif-native"] }
libheif-rs  = "2.7.0"

# Testing and compression
tempfile = "3.16.0"
proptest = "1.10.0"
flate2   = "1.1.9"

# Signal handling
ctrlc = "3.4.5"

# Randomization
rand = "0.8.5"

shared_utils = { path = "shared_utils" }

[profile.release]
lto            = true
opt-level      = 3
codegen-units  = 1
strip          = "symbols"

[profile.dev]
opt-level = 0
