[package]
name = "shared_utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared utilities for modern_format_boost tools"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
libc = { workspace = true }
xattr = { workspace = true }
filetime = { workspace = true }
log = { workspace = true }
which = { workspace = true }
tempfile = { workspace = true }
image = { workspace = true }
rayon = { workspace = true }
libheif-rs = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = []
