[package]
name = "vid-av1"
version = "0.1.0"
edition = "2021"
authors = ["Modern Format Boost Contributors"]
description = "Video quality analyzer and AV1 converter"
license = "MIT"
keywords = ["video", "av1", "quality", "compression"]

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
filetime = { workspace = true }
libc = { workspace = true }
xattr = { workspace = true }
which = { workspace = true }
shared_utils = { workspace = true }
