[package]
name = "vid-av1"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Video quality analyzer and AV1 converter"
keywords = ["video", "av1", "quality", "compression"]

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
filetime = { workspace = true }
libc = { workspace = true }
xattr = { workspace = true }
which = { workspace = true }
shared_utils = { workspace = true }
