[package]
name = "vid-hevc"
version = "0.1.0"
edition = "2021"
authors = ["Modern Format Boost Contributors"]
description = "Video quality analyzer and HEVC/H.265 converter"
license = "MIT"
keywords = ["video", "hevc", "h265", "quality"]

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
filetime = { workspace = true }
libc = { workspace = true }
xattr = { workspace = true }
which = { workspace = true }
shared_utils = { workspace = true }
image = { workspace = true }
