[package]
name = "vidquality-av1"
version = "0.1.0"
edition = "2021"
authors = ["Modern Format Boost Contributors"]
description = "Video quality analyzer and format converter - AV1 compression"
license = "MIT"
keywords = ["video", "ffv1", "av1", "quality", "archival"]

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Parallel processing
rayon = "1.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }

# Directory traversal
walkdir = "2.5"

# File modification time
filetime = "0.2"
libc = "0.2"
xattr = "1.3"

# Command execution check
which = "8.0"

# Shared utilities (progress bar, safety checks, batch processing)
shared_utils = { path = "../shared_utils" }

# CPU detection for performance optimization
num_cpus = "1.16"


